--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "build": "tsup",
-    "publish": "npm run build && npm publish"
+    "publish": "npm run build"
   },
   "repository": {
     "type": "git",
