--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@backs/logger",
-  "version": "1.1.1",
+  "version": "1.1.5",
   "description": "An advanced logger using winston & colorette behind the scenes",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "build": "tsup",
-    "publish": "npm run build"
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
